# HaRay

./: HaRay.cabal  README.md  stack.yaml
app/: Main.hs
src/: Trace.hs
src/HaRay/: Rays.hs  Trace.hs  Vectors.hs
src/HaRay/Objects/: Spheres.hs
