name:                HaRay
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Chobbes/HaRay#readme
license:             MIT
license-file:        LICENSE
author:              Calvin Beck
maintainer:          hobbes@ualberta.ca
copyright:           Calvin Beck (2016)
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaRay.Objects.Spheres
                     , HaRay.Trace
                     , HaRay.Rays
                     , HaRay.Vectors
  build-depends:       base >= 4.7 && < 5
                     , accelerate >= 0.15.1.0 && < 0.16
  default-language:    Haskell2010

executable HaRay
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaRay
                     , accelerate >= 0.15.1.0 && < 0.16
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Chobbes/HaRay
